feat: 트레이닝 생성 시 이미지 업로드 가능